# apex

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  Rocket.toml  buildspec.yaml  lambda_build.sh  lambda_deploy.sh
lambda/templates/: .404.html.hbs.icloud  .about-us.html.hbs.icloud  .contact.html.hbs.icloud  .index.html.hbs.icloud  .services.html.hbs.icloud  .tips-and-tricks.html.hbs.icloud
src/: caching.rs  headers.rs  main.rs
src/styles/: app.scss
templates/: 404.html.hbs  about-us.html.hbs  contact.html.hbs  index.html.hbs  services.html.hbs  tips-and-tricks.html.hbs
templates/components/: footer.html.hbs  layout.html.hbs  nav.html.hbs
