[package]
name = "apex"
version = "0.1.0"
authors = ["Ephraim Kunz"]
edition = "2021"

[dependencies]
lazy_static = "1.2.0"
rocket = "0.5.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_json = "1.0"
handlebars = "1.1.0"
percent-encoding = "2.1.0"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
lambda-web = { version = "0.1.8", features=["rocket05"] }